@@ -1,3 +1,10 @@
+Sun Dec 20 11:14:11 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* proc.c (rb_mod_define_method): should check Symbol or not.
+	  [Bug #11850]
+
+	* test/ruby/test_method.rb: add a test.
+
 Sun Dec 20 11:01:57 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* proc.c (rb_mod_define_method): fix notation.
